--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ ul {
 	list-style: none;
 }
 
-.bg{
+#bg{
 	width: 100%;
 	height: 100%;
 	background-color: #d14c2b;
@@ -176,7 +176,6 @@ aside .user-data .payment {
 
 aside .user-data p {
 	margin-top: 40px;
-	padding-left: 30px;
 	text-transform: uppercase;
 	font-weight: normal;
 }
@@ -210,7 +209,7 @@ aside .user-data p {
 	content: "";
 	width: 340px;
 	height: 340px;
-	z-index: -1;
+	z-index: -99999;
 	left: 0;
 	top: 0;
 	background-color: #00ffae;
@@ -224,21 +223,23 @@ aside .user-data p {
 	display: inline-block;
 }
 
-.product .second-img {
+.product #img2 {
 	padding-top: 80px;
 	vertical-align: top;
 	margin-left: 20px;
+	z-index: 202020;
+
 }
-.product .second-img:before {
+.product #img2:before {
 	background-color: #fff600;
-	margin-top: 150px;
+	margin-top: 140px;
 }
 
 .product .beetw-fig {
 	position: absolute;
 	text-align: center;
 	padding-top: 120px;
-	font-size: 0.4em;
+	font-size: 0.3em;
 	display: inline-block;
 	transform: rotate(90deg);
 	padding-right: 40px;
@@ -264,14 +265,14 @@ aside .user-data p {
 	transform: rotate(90deg);
 	padding-right: 30px;
 	margin-left: -40px;
-	font-size: 0.8em;
+	font-size: 0.6em;
 	float: left;
 }
 
 .product-caption {
 	position: absolute;
 	top: 50px;
-	right: 50px;
+	right: 80px;
 	font-size: 0.5em;
 	text-transform: uppercase;
 }
@@ -289,15 +290,12 @@ aside .user-data p {
 
 .content-wrapper .colors-change ul li{
 	text-transform: uppercase;
-}
-
-.content-wrapper .colors-change ul li a{
-	text-transform: uppercase;
 	line-height: 3;
 	font-size: 0.4em;
-	margin-left: 30px;
+	padding-left: 30px;
 	text-decoration: none;
 	color: #fff;
+	cursor: pointer;
 }
 
 .content-wrapper .colors-change li:before {
@@ -307,9 +305,10 @@ aside .user-data p {
 	display: inline-block;
 	float: left;
 	margin-top: 30px;
+	margin-right: 10px;
 }
 
-.content-wrapper .colors-change .active-type2:before {
+.content-wrapper .colors-change .active-type-2:before {
 	background-color: #fff;
 } 
 
@@ -348,7 +347,7 @@ footer .languige ul li a {
 	color: #fff;
 	text-decoration: none;
 	margin-left: 20px;
-	font-size: 0.5em;
+	font-size: 0.4em;
 	text-transform: uppercase;
 	font-family: "Helvetica";
 }
@@ -357,6 +356,29 @@ footer .languige ul li:first-child a {
 	margin-left: none;
 } 
 
+footer .languige .active-type-3 {
+	text-decoration: underline;
+}
+
 footer .languige ul li a:hover {
 	text-decoration: underline;
 }
+
+
+
+/* Styles for changing theme 
+		
+	(Dark blue)*/
+	.bg-color-dark-blue {
+		background-color: #186ba4 !important;
+	}
+
+	.dark-blue-icon-1:before {
+		background-color: #fff600 !important;
+	}
+
+	.dark-blue-icon-2:before {
+		background-color: #fff !important;
+	}
+
+/* End */
