--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,16 @@
   font-weight: normal; 
   }
 
+  @font-face {
+   font-family: "HelveticaUltraLight"; 
+   src: url("fonts//HELVETICANEUECYR-ULTRALIGHT.eot"); 
+   src: url("fonts//HELVETICANEUECYR-ULTRALIGHT.eot?#iefix")format("embedded-opentype"), 
+   url("fonts//HELVETICANEUECYR-ULTRALIGHT.woff") format("woff"), 
+   url("fonts//HELVETICANEUECYR-ULTRALIGHT.ttf") format("truetype"); 
+   font-style: normal; 
+   font-weight: normal; 
+   }
+
 * {
 	margin: 0;
 	padding: 0;
@@ -163,21 +173,25 @@ aside .active:before{
 }
 
 aside .user-data{
-	padding-left: 30px;
+	padding-left: 50px;
 	margin-top: 80px;
-	font-size: 0.5em;
+	
 }
 
 aside .user-data .payment {
 	transform:rotate(90deg);
 	display: inline-block;
 	width: auto;
+	font-size: 0.4em;
+	font-weight: normal;
 }
 
 aside .user-data p {
 	margin-top: 40px;
 	text-transform: uppercase;
-	font-weight: normal;
+	font-size: 0.3em;
+	margin-left: 10px;
+	font-family: "HelveticaUltraLigh",sans-serif;
 }
 
 .content-wrapper, footer {
