--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing:border-box;
-}
+	}
 
 body {
 	font-size: 38pt;
@@ -55,8 +55,9 @@ ul {
 	background-color: #d14c2b;
 	min-height: 100vh;
 	display: block;
-	padding-top: 40px;
+	padding-top: 5%;
 	margin: auto;
+	transition:background-color 1s linear;
 }
 
 .main-wrapper {
@@ -64,23 +65,20 @@ ul {
 	display: block;
 	width: 1300px;
 	background: url(../images/hard_bg.png) center center no-repeat;
-	padding: 30px 15px;
+	background-size: cover;
+	padding: 0 15px;
 }
 
 header {
 	width: 100%;
 	display: block;
-	margin-bottom: 10px;
+	padding: 30px;
+	text-align: center;
 }
 
 .main-wrapper header li {
 	display: inline-block;
 	font-family: "Helvetica";
-}
-
-.main-wrapper header ul li:nth-child(2){
-	margin-left: 80px;
-	margin-right: 40px;
 }
 
 .main-wrapper header ul li:last-child {
@@ -91,6 +89,8 @@ header {
 	font-size: 1em;
 	vertical-align: top;
 	font-family: 'Orbitron', sans-serif; 
+	float: left;
+	margin-right: 40px;
 }
 
 .main-wrapper .prod-name {
@@ -104,6 +104,8 @@ header {
 .main-wrapper .date-wrapper{
 	font-size: 0.4em;
 	padding-top: 50px;
+	text-align: left;
+	line-height: 1.2;
 }
 
 .main-wrapper .date {
@@ -116,12 +118,16 @@ header {
 }
 
 .main-wrapper .links{
-	vertical-align: top;
-	margin-left: 60px;
+	float: right;
+	padding-top: 10px;
 }
 
 .main-wrapper .links div:first-child {
 	margin-left: 0;
+}
+
+.main-wrapper .links a img {
+	vertical-align: top;
 }
 
 .main-wrapper .links>* {
@@ -129,11 +135,18 @@ header {
 	margin-left: 20px;
 }
 
+.content-wrapper {
+	text-align: center;
+}
+
 aside, .product {
-	display: block;
-	float: left; 
-	margin-left: 60px;
+	display: inline-block;
 	position: relative;
+	margin: 0 20px;
+}
+
+aside {
+	float: left;
 }
 
 aside ul {
@@ -143,6 +156,7 @@ aside ul {
 aside nav ul li {
 	display: block !important;
 	line-height: 0.6;
+	text-align: left;
 }
 
 aside nav ul li a {
@@ -157,19 +171,21 @@ aside nav ul li a {
 aside nav a:before {
 	content: "";
 	width: 20px;
-	height: 5px;
+	height: 3px;
 	display: inline-block;
 	vertical-align: middle;
 	margin-right: 10px;
-	margin-bottom: 5px;
+	margin-bottom: 3px;
 }
 
 aside a:hover:before {
 	background-color: #fff;
+	transition:background-color .5s linear;
 }
 
 aside .active:before{
 	background-color: #fff;
+	transition:background-color .5s linear;
 }
 
 aside .user-data{
@@ -204,8 +220,12 @@ aside .user-data p {
 }
 
 .product figure img {
-	margin-bottom: 90px;
+	margin-bottom: 100px;
 	display: inline-block;
+}
+
+#img1 img, #img2 img {
+	height: 340px;
 }
 
 .product figcaption>* {
@@ -225,28 +245,28 @@ aside .user-data p {
 	height: 340px;
 	z-index: -99999;
 	left: 0;
-	top: 0;
+	top: 60px;
 	background-color: #00ffae;
 	display: block;
 	position: absolute;
 	border-radius: 50%;
-	margin-top: 60px;
+	transition:background-color .5s linear;
 }
 
 .content-wrapper .product>*{
 	display: inline-block;
+	transition:background-color 0.5s linear;
+
 }
 
 .product #img2 {
 	padding-top: 80px;
 	vertical-align: top;
 	margin-left: 20px;
-	z-index: 202020;
-
 }
 .product #img2:before {
 	background-color: #fff600;
-	margin-top: 140px;
+	top: 140px;
 }
 
 .product .beetw-fig {
@@ -254,6 +274,7 @@ aside .user-data p {
 	text-align: center;
 	padding-top: 120px;
 	font-size: 0.3em;
+	line-height: 1.2;
 	display: inline-block;
 	transform: rotate(90deg);
 	padding-right: 40px;
@@ -264,6 +285,7 @@ aside .user-data p {
 	font-size: 0.45em;
 	text-decoration: none;
 	color: #fff;
+	line-height: 1;
 }
 
 .product figcaption a:hover {
@@ -272,7 +294,6 @@ aside .user-data p {
 
 .product figcaption {
 	text-align: right;
-	margin-top: 25px;
 }
 
 .product figcaption .price {
@@ -286,15 +307,16 @@ aside .user-data p {
 .product-caption {
 	position: absolute;
 	top: 50px;
-	right: 80px;
+	right: -20%;
 	font-size: 0.5em;
 	text-transform: uppercase;
 }
 
 .content-wrapper .colors-change {
 	text-align: right;
-	vertical-align: top;
 	padding-top: 150px;
+	margin-right: 50px;
+	float: right;
 	font-family: "Helvetica";
 }
 
@@ -315,7 +337,7 @@ aside .user-data p {
 .content-wrapper .colors-change li:before {
 	content: "";
 	width: 50px;
-	height: 5px;
+	height: 3px;
 	display: inline-block;
 	float: left;
 	margin-top: 30px;
@@ -324,16 +346,18 @@ aside .user-data p {
 
 .content-wrapper .colors-change .active-type-2:before {
 	background-color: #fff;
+	transition:background-color .5s linear;
 } 
 
 .content-wrapper .colors-change li:hover:before {
 	background-color: #fff;
+	transition:background-color .5s linear;
 }
 
 .main-wrapper>footer {
 	vertical-align: middle;
-	padding: 15px 100px;
-	padding-top: 0;
+	padding: 0 30px;
+	padding-bottom: 10px;
 }
 
 footer .copyright {
@@ -353,21 +377,22 @@ footer .languige ul {
 }
 
 footer .languige ul li {
-	float: left;
 	display: inline-block;
+	vertical-align: top;
 }
 
 footer .languige ul li a {
 	color: #fff;
 	text-decoration: none;
-	margin-left: 20px;
 	font-size: 0.4em;
+	line-height: 1;
 	text-transform: uppercase;
+	vertical-align: top;
 	font-family: "Helvetica";
 }
 
 footer .languige ul li:first-child a {
-	margin-left: none;
+	margin-left: 0;
 } 
 
 footer .languige .active-type-3 {
@@ -396,3 +421,103 @@ footer .languige ul li a:hover {
 	}
 
 /* End */
+
+
+/* <max-width screen*/
+
+@media (max-width: 1610px){
+
+body {
+	font-size: 24pt;
+
+}
+
+#bg {
+	padding-top: 3%;
+}
+
+.main-wrapper {
+	width: 960px;
+}
+
+header {
+	padding: 15px;
+}
+
+.main-wrapper header ul li:nth-child(2){
+	margin-left: 40px;
+	margin-right: 20px;
+}
+
+.main-wrapper .date-wrapper{
+	padding-top: 30px;
+}
+
+aside, .product {
+	margin-left: 30px;
+}
+
+aside nav ul li a {
+	padding-left: 0;
+}
+
+aside .user-data{
+	padding-left: 20px;
+	margin-top: 50px;
+}
+
+aside .user-data p {
+	margin-top: 10px;
+}
+
+.product figure img {
+	margin-bottom: 50px;
+}
+
+#img1 img, #img2 img {
+	height: 220px;
+}
+
+.product figure{
+	width: 220px;
+}
+
+.product figure:before {
+	width: 220px;
+	height: 220px;
+	top: 40px;
+}
+
+.product #img2 {
+	padding-top: 40px;
+	margin-left: 15px;
+}
+
+.product #img2:before {
+	top: 80px;
+}
+
+.product .beetw-fig {
+	padding-top: 50px;
+	padding-right: 20px;
+}
+
+.product-caption {
+	top: 15px;
+}
+
+.content-wrapper .colors-change {
+	padding-top: 100px;
+	margin-right: 30px;
+}
+
+.content-wrapper .colors-change li:before {
+	width: 30px;
+	margin-top: 18px;
+}
+
+.main-wrapper>footer {
+	padding: 0 15px;
+}
+
+}
